UPDATED /projects/:project_id/name
